comma added to nav logo after maes. trying to fix overlowx: hidden on media query css line 107. stack overflow says add html selector along with body selector.

--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ body {
 }
 
 @media screen and (max-width:768px) {
-    body {
-        overflow-x: hidden;
-    }
+    html, body {
+        overflow-x: hidden; 
+      }
 
     .navbar-nav {
         position: absolute;
